fix space details page
